objects/WT_Knowledge_Keyword_Group__c.object
<CustomObject>
    <fields>
        <fullName>WT_Correctly_Spelled_Keyword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correctly Spelled Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Hypernym_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hypernym 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Hypernym_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hypernym 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Hypernym_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hypernym 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Misspelling_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Misspelling 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Misspelling_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Misspelling 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Misspelling_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Misspelling 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Stop_Word__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Word</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Synonym_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Synonym 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Synonym_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Synonym 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Synonym_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Synonym 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Keyword Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hypernyms</fullName>
        <columns>NAME</columns>
        <columns>WT_Hypernym_1__c</columns>
        <columns>WT_Hypernym_2__c</columns>
        <columns>WT_Hypernym_3__c</columns>
        <columns>WT_Hypernym_4__c</columns>
        <columns>WT_Hypernym_5__c</columns>
        <columns>WT_Hypernym_6__c</columns>
        <columns>WT_Hypernym_7__c</columns>
        <columns>WT_Hypernym_8__c</columns>
        <columns>WT_Hypernym_9__c</columns>
        <columns>WT_Hypernym_10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WT_Knowledge_Keyword_Group__c.WT_Hypernyms</value>
        </filters>
        <label>Hypernyms</label>
    </listViews>
    <listViews>
        <fullName>Misspellings</fullName>
        <columns>NAME</columns>
        <columns>WT_Correctly_Spelled_Keyword__c</columns>
        <columns>WT_Misspelling_1__c</columns>
        <columns>WT_Misspelling_2__c</columns>
        <columns>WT_Misspelling_3__c</columns>
        <columns>WT_Misspelling_4__c</columns>
        <columns>WT_Misspelling_5__c</columns>
        <columns>WT_Misspelling_6__c</columns>
        <columns>WT_Misspelling_7__c</columns>
        <columns>WT_Misspelling_8__c</columns>
        <columns>WT_Misspelling_9__c</columns>
        <columns>WT_Misspelling_10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WT_Knowledge_Keyword_Group__c.WT_Misspellings</value>
        </filters>
        <label>Misspellings</label>
    </listViews>
    <listViews>
        <fullName>Stop_Words</fullName>
        <columns>NAME</columns>
        <columns>WT_Stop_Word__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WT_Knowledge_Keyword_Group__c.WT_Stop_Words</value>
        </filters>
        <label>Stop Words</label>
    </listViews>
    <listViews>
        <fullName>Synonyms</fullName>
        <columns>NAME</columns>
        <columns>WT_Synonym_1__c</columns>
        <columns>WT_Synonym_2__c</columns>
        <columns>WT_Synonym_3__c</columns>
        <columns>WT_Synonym_4__c</columns>
        <columns>WT_Synonym_5__c</columns>
        <columns>WT_Synonym_6__c</columns>
        <columns>WT_Synonym_7__c</columns>
        <columns>WT_Synonym_8__c</columns>
        <columns>WT_Synonym_9__c</columns>
        <columns>WT_Synonym_10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WT_Knowledge_Keyword_Group__c.WT_Synonyms</value>
        </filters>
        <label>Synonyms</label>
    </listViews>
    <nameField>
        <displayFormat>KKG-{0000000}</displayFormat>
        <label>Knowledge Keyword Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Keyword Groups</pluralLabel>
    <recordTypes>
        <fullName>WT_Hypernyms</fullName>
        <active>true</active>
        <label>Hypernyms</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Misspellings</fullName>
        <active>true</active>
        <label>Misspellings</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Stop_Words</fullName>
        <active>true</active>
        <label>Stop Words</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Synonyms</fullName>
        <active>true</active>
        <label>Synonyms</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>